finished call to action section

--- a/index.html
+++ b/index.html
@@ -31,47 +31,57 @@
 			</p>
 			<button>Sign up</button>
 		</div>
-		<div class="hero-image">
-			<img src="/images/heroimage.jpg" alt="Outer Space">
-		</div>
+
+			<img class="hero-image" src="/images/heroimage.jpg" alt="Outer Space">
+
   </section>
   <section class="info">
 		<h2>Some random information</h2>
 		<div class="card-container">
 			<div class="card">
-				<img src="" alt="">
+				<img src="../images/planet1.jpeg" alt="">
 				<div class="card-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, asperiores.</div>
 			</div>
 			<div class="card">
-				<img src="" alt="">
+				<img src="../images/planet2.jpeg" alt="">
 				<div class="card-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, asperiores.</div>
 			</div>
 			<div class="card">
-				<img src="" alt="">
+				<img src="../images/planet3.jpg" alt="">
 				<div class="card-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, asperiores.</div>
 			</div>
 			<div class="card">
-				<img src="" alt="">
+				<img src="../images/planet4.jpg" alt="">
 				<div class="card-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, asperiores.</div>
 			</div>
 		</div>
   </section>  
   <section class="testimonial">
-		<p class="testimonial-text">
-			This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.
-		</p>
-		<p class="testimonial-author">
-			-John Smith, Engineer.
-		</p>
+		<div>
+			<p class="testimonial-text">
+				<em>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+			<p class="testimonial-author">
+				-John Smith, Engineer.
+			</p>
+		</div>
   </section>
   <section class="signup">
-		<div class="signup-container">
-			<p class="signup-text">
-				Call to action! It's time!
-				Sign up for our product by clicking that button right over there.
-			</p>
-			<button>Sign up</button>
-		</div>
+
+			<div class="signup-container">
+				<div class="signup-container2">
+					<p class="signup-header">
+						Call to action! It's time!
+					</p>
+					<p class="signup-text">
+						Sign up for our product by clicking that button right over there.
+					</p> 
+				</div>
+
+				<div class="button-container">
+					<button class="call-to-action-button">Sign up</button>
+				</div>
+			</div>
+	
   </section>
   <footer>
 		Copyright &#169 The Odin Project 2021.
