--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	
   </section>
   <footer>
-		Copyright &#169 The Odin Project 2021.
+		<p>Copyright &#169 The Odin Project 2021.</p>
   </footer>
 </body>
 </html>
