--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
 
   </header>
   <section class="hero">
-		<div class="hero-info">
-			<p class="hero-title">This website is awesome</p>
-			<p class="hero-subtext">
-				This website has some subtext that goes her under the main title. It's a smaller font and the color is lower contrast.
-			</p>
-			<button>Sign up</button>
+		<div class="hero-container">
+			<div class="hero-info">
+				<p class="hero-title">This website is awesome</p>
+				<p class="hero-subtext">
+					This website has some subtext that goes her under the main title. It's a smaller font and the color is lower contrast.
+				</p>
+				<button>Sign up</button>
+			</div>
+	
+				<img class="hero-image" src="/images/heroimage.jpg" alt="Outer Space">
 		</div>
 
-			<img class="hero-image" src="/images/heroimage.jpg" alt="Outer Space">
 
   </section>
   <section class="info">
