Attempted to fix images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<button>Sign up</button>
 			</div>
 	
-				<img class="hero-image" src="/images/heroimage.jpg" alt="Outer Space">
+				<img class="hero-image" src="./images/heroimage.jpg" alt="Outer Space">
 		</div>
 
 
@@ -42,19 +42,19 @@
 		<h2>Some random information</h2>
 		<div class="card-container">
 			<div class="card">
-				<img src="../images/planet1.jpeg" alt="">
+				<img src="./images/planet1.jpeg" alt="">
 				<div class="card-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, asperiores.</div>
 			</div>
 			<div class="card">
-				<img src="../images/planet2.jpeg" alt="">
+				<img src="./images/planet2.jpeg" alt="">
 				<div class="card-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, asperiores.</div>
 			</div>
 			<div class="card">
-				<img src="../images/planet3.jpg" alt="">
+				<img src="./images/planet3.jpg" alt="">
 				<div class="card-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, asperiores.</div>
 			</div>
 			<div class="card">
-				<img src="../images/planet4.jpg" alt="">
+				<img src="./images/planet4.jpg" alt="">
 				<div class="card-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, asperiores.</div>
 			</div>
 		</div>
